[gd_scene load_steps=7 format=3 uid="uid://dhfial3swgy08"]

[ext_resource type="Script" uid="uid://btrv24l6ptjc4" path="res://menus/main_menu.gd" id="1_5ms5j"]
[ext_resource type="Theme" uid="uid://cr64eprmpxfuy" path="res://theme.tres" id="1_ku1ks"]
[ext_resource type="PackedScene" uid="uid://2p8t5pmie1mf" path="res://camera.tscn" id="3_wlfof"]
[ext_resource type="PackedScene" uid="uid://cra5svle4din1" path="res://units/scenes/Player.tscn" id="4_bgqmh"]
[ext_resource type="Animation" uid="uid://c62o3hy2w43lp" path="res://level_transition_out.res" id="5_bgqmh"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_62v7d"]
_data = {
&"level_transition_out": ExtResource("5_bgqmh")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5ms5j")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Camera2D" parent="." instance=ExtResource("3_wlfof")]

[node name="Player" parent="." instance=ExtResource("4_bgqmh")]
position = Vector2(960, 1000)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -419.0
offset_top = -232.0
offset_right = 419.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_ku1ks")
theme_override_font_sizes/font_size = 50
text = "Start Game"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_ku1ks")
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_ku1ks")
theme_override_font_sizes/font_size = 50
text = "Exit"

[node name="LevelTransition" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_62v7d")
}

[connection signal="projectile_shot" from="Player/Shooter" to="." method="_on_shooter_projectile_shot"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_exit_pressed"]
[connection signal="animation_finished" from="LevelTransition" to="." method="_on_level_transition_animation_finished"]

[editable path="Player"]
